force-app/main/default/objects/Unified_Sync_Config__mdt/Unified_Sync_Config__mdt.object-meta.xml
<CustomObject>
    <label>Unified Sync Config</label>
    <pluralLabel>Unified Sync Config</pluralLabel>
</CustomObject>