force-app/main/default/objects/Unified_Sync_Config__mdt/fields/batchSizeAttachment__c.field-meta.xml
<CustomField>
    <fullName>batchSizeAttachment__c</fullName>
    <label>Batch Size Attachment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>