force-app/main/default/objects/Unified_Sync_Config__mdt/fields/batchSizeCDL__c.field-meta.xml
<CustomField>
    <fullName>batchSizeCDL__c</fullName>
    <label>Batch Size CDL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>