force-app/main/default/objects/Unified_Sync_Config__mdt/fields/batchSizeContentVersion__c.field-meta.xml
<CustomField>
    <fullName>batchSizeContentVersion__c</fullName>
    <label>Batch Size Content Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>