force-app/main/default/objects/Unified_Sync_Config__mdt/fields/hourlyDeltaEnabled__c.field-meta.xml
<CustomField>
    <fullName>hourlyDeltaEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hourly Delta Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>