force-app/main/default/objects/Unified_Sync_Config__mdt/fields/hourlyDeltaLookbackMins__c.field-meta.xml
<CustomField>
    <fullName>hourlyDeltaLookbackMins__c</fullName>
    <label>Hourly Delta Lookback Mins</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>