force-app/main/default/objects/Unified_Sync_Config__mdt/fields/maxUpsertPerTxn__c.field-meta.xml
<CustomField>
    <fullName>maxUpsertPerTxn__c</fullName>
    <label>Max Upsert Per Txn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>