force-app/main/default/objects/Unified_Sync_Config__mdt/fields/nightlyFullEnabled__c.field-meta.xml
<CustomField>
    <fullName>nightlyFullEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Nightly Full Enabled</label>
    <type>Checkbox</type>
</CustomField>