force-app/main/default/objects/Unified_Sync_Config__mdt/fields/ownershipPolicy__c.field-meta.xml
<CustomField>
    <fullName>ownershipPolicy__c</fullName>
    <label>Ownership Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LATEST_VERSION_MODIFIER</fullName>
                <default>true</default>
                <label>LATEST_VERSION_MODIFIER</label>
            </value>
            <value>
                <fullName>PARENT_OWNER</fullName>
            </value>
            <value>
                <fullName>ATTACHMENT_OWNER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>