force-app/main/default/objects/Unified_Sync_Config__mdt/fields/retryLimit__c.field-meta.xml
<CustomField>
    <fullName>retryLimit__c</fullName>
    <label>Retry Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>